--- a/HoldUntilICome.tex
+++ b/HoldUntilICome.tex
@@ -94,7 +94,7 @@ Murmuring broke out among the soldiers and others: ``Great Insharrad!'' and ``Ja
 Filima Kepra did not understand what was going on in the world. 
 All he knew was that rumours said the resphan kingdoms had gone to war against the suchian nations. 
 
-Kepra looked out. From where he stood in the Cressax citadel courtyard he could not see only the walls. Those massive white walls that looked impenetrable. 
+Kepra looked out. From where he stood in the Cressax citadel courtyard he could not see only the walls. Those massive stone walls that looked impenetrable. 
 But out there somewhere to the west was an enemy army bent on their destruction.
 
 Why was there suddenly war? Why would the resphain attack? 
@@ -116,14 +116,14 @@ Kepra’s tongue darted out nervously to lick his eye.
 
 Cressax Outpost was an important site, housing not only a major zest refinery but more importantly one the Sacred Pillars of the Great Concord that kept the suchian race united. Surely the resphain could not intend to destroy or desecrate the Pillar? Surely not even a resphan was capable of such blasphemous evil? 
 
-Kepra turned his head to look at the Pillar. It was a marvel. On the outside a monolithic obelisk of white and black stone, adorned with figures of Epitomes, heroes and serpents in gold and brass and iron. And inside it was full of marvellous machinery devised by brilliant mages and engineers, consecrated to the Epitomes of the Concord\dash{}noble Kelesh, wise Suthalba and mystic Tsor. It was this machinery, channelled through the splendid obelisk and many other Pillars like it, that upheld the Divine Concord and thus kept all reptilians connected to each other and to the virtuous Epitomes. It was the Concord that allowed the Epitomes to guide all suchians and scathae to lead virtuous lives and contribute to the greatness and harmony of their civilization.
+Kepra turned his head to look at the Pillar. It was a marvel. On the outside a monolithic obelisk of white and black stone, adorned with figures of Epitomes, heroes and serpents in gold and brass and iron. And inside it was full of marvellous machinery devised by brilliant mages and engineers, consecrated to the Epitomes of the Concord\dash{}noble Kelesh, wise Suthalba and mystic Tsor. It was this machinery, channelled through the splendid obelisk and many other Pillars like it, that upheld the Divine Concord and thus kept all reptilians connected to each other and to the Epitomes. It was the Concord that allowed the Epitomes to guide all suchians and scathae to lead virtuous lives and contribute to the greatness and harmony of their civilization.
 
 \emph{Would the resphain seek to destroy this? Is that how deep their evil goes?}
 
 Kepra could not even imagine what might happen if the Pillar were destroyed and the Concord damaged. Would all reptiles lose sight of the virtues of the Epitomes? Would they lose the Holy Principles, Zotha and Asheen, Greatness and Harmony? Would they turn on each other like mad beasts, bereft of all morals, all civilization, all bonds of kinship?
 
 \emph{
-    We must not let that happen.%
+    We must not let it come to that.%
 %     We must hold until the Exalted Lord arrives.
      }
 
@@ -160,8 +160,8 @@ He hoped their walls would hold.
 Another suchian stepped forth next to the captain\dash{}their spiritual leader, the hierophant Aeocryth of Rystessakhin.
 She was older than most of them; past a hundred at the very least, well into suchian middle age.
 She looked exotic in her beautiful yellow robe adorned with stones and jewels. 
-Where Kepra and most of the other suchians here had gray scales, Aeocryth’s faintly maroon-tinted scales marked her as a foreigner. 
-Though she spoke perfect High Talaac, she was not ethnically Talaac like Kepra and his master. Nor was she Saphyr like many of the others. 
+Where Kepra and most of the other suchians here had normal gray scales, Aeocryth’s faintly maroon-tinted scales marked her as a foreigner. 
+Though she spoke perfect High Talaac, she was not ethnically Talaac like Kepra and his master, nor Saphyr like many of the others. 
 Rystessakhin was a Felgian brood; hence her odd name, \emph{Aeocryth of Rystessakhin}. 
 By Talaac or Saphyr tradition the name would be Rystessakhin Aeocryth. 
 
@@ -192,9 +192,9 @@ It must be.
 ``Take your positions!'' said a scatha lieutenant. 
 
 Kepra double-checked that he had his dagger\dash{}for emergency self-defense. 
-He attached his third drumstick to his tail. 
-He adjusted the position of his secondary drum. 
-Then he picked up his two main drumsticks.
+He attached his third drumstick to his tail, 
+adjusted the position of his secondary drum,
+and picked up his two main drumsticks.
 
 Kepra was of the greater reptilian race, the suchians. 
 But he took orders from the lieutenant, a scatha. 
@@ -217,11 +217,12 @@ The ones he knew best were of course his fellow founts in service to the ward-ma
 They were all in place. Grecca with his smaller drums. Sorom and Contor with their horns. Sipel with her flutes. 
 And there, robed in blue and silver and strapped into the ward machine, was master Tezoron. 
 It was she whose work Kepra and his fellows would be supporting. And over there was the other ward-mage, Griph Parun, and her founts. He did not know them quite as well, but they had trained in concert together. 
+They were supposed by several more musicians who were not founts.
 
 \emph{We can do this.}
 
 With the two ward-mages was the cleric Aeocryth of Rystessakhin, seated on a sacred altar-throne, a machine that connected her directly to the Pillar. 
-Kepra's drums happened to get set up in a spot that put her right in his line of sight. 
+Kepra's drums happened to get set up in a spot that put the cleric right in his line of sight. 
 She carried no weapon. 
 She was a mage, but not a warrior-mage. 
 Her role was to be their spiritual guide, to keep Zotha and Asheen and the Epitomes alive in the heart of every reptile and thus keep their army together and their spirits high. 
@@ -242,6 +243,7 @@ A glorious sight. If they survived to see it.
 
 From his position Kepra could not see the enemy, only the immense wall. He could only hear the news as it was passed back from the battlements. 
 The resphan army marched on the west gate. 
+
 The so-called resphan army consisted almost entirely of humans\dash{}the lesser mammalian race. 
 Apparently the Fireborne reported five resphain. That was already bad enough. Kepra did not even want to think about the idea of facing a genuine army of resphain. 
 
@@ -262,10 +264,13 @@ Their fell eyes seemed to through pierce him with harpoons of dread, and Kepra h
 
 \emph{What can they do? What dread sorcery might they wield?} 
 
-Of course the hierophant and mages and founts needed to be out in the open to oversee the defense. 
-If they had been properly prepared they might have armoured carts or other shelter for the mages and founts. 
-
-If they had been properly prepared they would also have more men.
+He felt exposed. 
+The walls could stop humans, but not flying resphain. 
+He wished for shelter.
+But of course the hierophant and mages and founts needed to be out in the open to oversee the defense. 
+The last time Kepra had been on a battlefield they had at least had armoured carts and other shelter for the mages and founts. 
+\emph{But of course, if we'd been that well-prepared for war we'd also have more men.}
+%Of course, if they had been properly prepared for war they would also have more men.
 
 \emph{I hope Lord Iscrafel and his army will be here soon.}
 
@@ -306,13 +311,13 @@ A five-beat rhythm, as was traditional in suchian music.
 \drum{%
     One two three four five. One two three four \emph{tail}. One two three four \emph{tail}. One two-and-three four-and-five. One-and-two-and-three four-and-five. One-and-two \emph{tail} four-and-five. One-and-two \emph{tail} four-and-five.}
 
-The other fount-musicians joined in. 
+The other founts and musicians joined in. 
 Soon Kepra began to feel the trance. 
 He felt the connection to his brethren\dash{}his fellow founts and Master Tezoron. And the hierophant Aeocryth, their spiritual matriarch, soaring above and guiding them all. 
 Now in trance, the founts could begin to share the strength of their minds and bodies with their master.
 
 They played a well-known battle song. 
-Those soldiers who could began to sing the words to the song. Some stomped their feet, some pounded their spears to the rhythm. Kepra felt them in the Concord. Though the soldiers were not trained founts and could not share their strength directly, they could still contribute to the trance and help strengthen the Epitomes in everyone.
+Those soldiers who could began to sing the words to the song. Some stomped their feet, some pounded their spears to the rhythm. Kepra felt them in the Concord. Though the soldiers and musicians were not trained founts and could not share their strength directly, they could still contribute to morale and help strengthen the Epitomes in everyone.
 
 The hierophant gazed out over them all with a benevolent smile.
 
@@ -365,7 +370,7 @@ Kepra felt a surge of courage at her words, like water to a thirsty throat.
 And was he mistaken or had the cleric nodded and smiled directly at him just before, when he sent prayers to his master? 
 Was she reading his mind?
 
-At the battlements, gunfire was intensifying. A scatha cried out in pain. Kepra could see. It could be an enemy hit or it could be the soldier’s own gun malfunctioning.
+At the battlements, gunfire was intensifying. A scatha cried out in pain. Kepra could not see. It could be an enemy hit or it could be the soldier’s own gun malfunctioning.
 
 Kepra drummed on. 
 \emph{Must keep the barrier strong.}
@@ -391,7 +396,7 @@ The soldiers gasped. Kepra looked up while keeping his rhythm. A hideous winged 
 
 A black-armoured resphan, wielding a great bow carved with eldritch symbols. 
 
-The resphan beat his wings and rose high into the air. Then he folded his wings and let himself drop. In free fall, the resphan notched an arrow and loosed. And another. The two arrows howled through the air like hungry daemons and punched into the barrier with a crackle. Once again the resphan spreads his wings and veered off.
+The resphan beat his wings and rose high into the air. Then he folded his wings and let himself drop. In free fall, the resphan notched an arrow and loosed. And another. The two arrows howled through the air like hungry daemons and punched into the barrier with a crackle. Once again the resphan spread his wings and veered off.
 
 When the resphan dragged the bow through the air, the bow seemed to leave behind an inky smear of black murderous evil. 
 The weapon must be consecrated to whatever dark nameless powers the resphain prayed to, ensorcelled to bring destruction and death.
@@ -425,7 +430,7 @@ Kepra dropped his drumstick in momentary shock.
 Aeocryth echoed him: ``Don’t falter, noble founts! Asheen!''
 
 And Kepra's drumstick was back in his hand. He barely remembered picking it up. 
-He was sure the hierophant had taken it from the ground and handed it to him. Such was her influence. 
+He could have sworn the hierophant must have taken it from the ground and handed it to him. Such was her influence. 
 
 \emph{She is incredible. She is almost a Mysteriarch.}
 
@@ -446,7 +451,7 @@ With a powerful cleric such as Aeocryth to lead them, the burden of duty was so 
 It was almost effortless. 
 Like floating in water, buoyed up by her gentle strength.
 
-The other founts likewise found their pace again. 
+The other musicians likewise found their pace again. 
 They reached out to each other’s presence and the hierophant’s guidance. 
 %It gave them strength. 
 The music swelled as Holy Asheen swelled in their hearts, and Zotha.
@@ -477,7 +482,8 @@ Even with several of their number fallen and without Asheen and Zotha they remai
 The taloned resphan returned. This time she flew high over the wall and dove straight down in their midst. 
 %She flies straight through the barrier\dash{}for it protects only against projectiles. 
 The barrier only protected against missile weapons, so she passed right through it. 
-She flew low over the defenders and kicked with her daemoniac blades. 
+She flew low over the defenders, shrugging off spear-jabs and kicking with her daemoniac blades. 
+%Soldiers jabbed at her with their spears. 
 Soldiers gasped as they fell to her talons.
 
 The resphan swooped right past Kepra’s head to swing at Master Tezoron and the ward machine. 
@@ -504,7 +510,7 @@ Aeocryth had picked him up again. He had his rhythm back.
 
 \emph{We must hold. Think of the brood. Think of the little ones and the eggs!}
 
-The female resphan came back for yet another pass. She swooped near, her daemoniac talon-sword leaving a kind inky shadows behind where they swung, like blackened wounds of death in the fabric of the world itself. 
+The female resphan came back for yet another pass. She swooped near, her daemoniac talon-swords leaving a kind inky shadows behind where they swung, like blackened wounds of death in the fabric of the world itself. 
 A soldier fell, head severed. 
 
 Kepra kept drumming. 
@@ -516,7 +522,7 @@ Kepra kept drumming.
 
 
 \section{Concord}
-On his other side, Kepra just barely saw a third resphan swooping right at him, swinging some bladed weapon. On reflex he threw himself on the ground moments before the resphan's weapon clove his giant drum. 
+Out of the corner of his eye Kepra just barely saw a third resphan swooping right at him, swinging some bladed weapon. On reflex he threw himself on the ground moments before the resphan's weapon clove his giant drum. 
 
 He looked up from the ground. 
 The resphan had flown past and was out of sight for the moment. 
@@ -527,7 +533,9 @@ He looked around. So many defenders had fallen. Tezoron Rarxan was down\dash{}pe
 Where was the hierophant? 
 
 There.
-His subconscious mind pulled his eyes to her. She had risen from the altar-throne.
+His subconscious mind pulled his eyes to her. 
+
+She had risen from the altar-throne.
 
 The taloned female resphan was coming straight at her! 
 
@@ -569,7 +577,10 @@ The resphan landed. She unsheathed a sword and strode towards Aeocryth and her d
 
 Kepra picked up the gun. 
 
-The battered suchian swordsman staggered forward to meet the resphan. Aeocryth gritted her teeth. Although his strength was almost spent, the man raised his shield with a defiant cry of ``Zotha!''
+The battered suchian swordsman staggered forward to meet the resphan. 
+Aeocryth gritted her teeth. 
+Although the man's strength was almost spent, his eyes shone bright and fierce.
+He raised his shield with a defiant cry of ``Zotha!''
 
 Kepra fumbled to check the gun. 
 
@@ -581,7 +592,7 @@ He held up his sword.
 
 The gun was loaded.
 
-A talon lashed out. Blades clashed again. The suchian’s sword fell from his hand. Another talon kicked. This time the blade rammed through his skull. 
+A talon lashed out. Blades clashed again. The suchian’s sword fell from his hand. Another talon thrust. This time the blade rammed through his skull. 
 The resphan pulled back her foot and he slumped, half of his head gone.
 
 The old cleric let slip a wordless yelp of terror.
@@ -622,10 +633,10 @@ That was definitely not Kepra's own inner voice.
 That was Aeocryth. 
 Through the Concord she held his soul in a mighty grip, pouring her resolve into him.
 
+\emph{Yes. Thank you, holy one.}
+
 He would not break.
 He would not succumb to fear.
-
-\emph{Yes. Thank you, holy one.}
 
 The resphan advanced on him. 
 
@@ -670,11 +681,12 @@ Kepra turns his head.
 
 Sipel had a trance-like look on her face.
 Like the music trance, but not quite.
+Her eyes gleamed with a deep clarify and purpose.
 
 Sipel charged with her bayonet. 
 
 Kepra's self-preservation instincts kicked in and he rolled away just as the resphan kicked in direction. 
-The talon bit into his scales, but he avoided getting disemboweled.
+The talon bit into his robe and scales, but he got to keep his organs intact.
 The resphan flapped her wings and leapt past him\dash{}her wings still strong despite the wounds. 
 She kicked with one foot, then the other.
 %Kepra's directionKepra a savage kick and strides past. She swings her sword. 
@@ -690,11 +702,15 @@ Perhaps even guilt.
 
 Was this the same feeling that made her cry out before? Kepra had mistaken it for fear. Was it actually compassion, grief for her slain defenders?
 
+\emph{No time to ponder!}
+
+The resphan landed. 
+
 Meanwhile Kepra had found his feet. 
 
 His gun was out of reach now. 
 
-The resphan landed and turned. 
+The resphan turned to face him. 
 
 Aeocryth snapped a brief growl.
 Kepra drew his dagger. 
@@ -710,10 +726,15 @@ But it was dull, blurred. He was removed from it, as if swimming in water.
 Around him was the Concord. 
 It was thick and warm. 
 His limbs moved with it. 
+
 His legs were Asheen. 
 His hand was Zotha. 
 %He reached out to the Concord. Sipel was dead or almost dead, but the Concord was still there. 
 %Asheen and Zotha were there. The hierophant was there. 
+
+No fear. 
+No hesitation.
+Only purpose.
 
 Asheen took a step, placing Kepra's body between the hierophant and the resphan.
 
@@ -726,19 +747,20 @@ She withdrew her foot and
 Kepra fell on his snout. 
 
 Asheen clenched. Zotha pulled. But Kepra's muscles did not obey.
-He was too weak now.
+%He was too weak now.
+His body had no strength left.
 He lay on the ground.
 Blood poured out.
 
 At this moment there rushed in a completely new sensation in the Concord. 
 A colossal presence intruded upon his mind.
-Where Aeocryth's grip had been focused, this was omnipresent, enveloping him and all of them.
+Where Aeocryth's touch had been focused, this was omnipresent, engulfing him and all of them.
 
-A wave of fire and fury. 
+A tidal wave of fire and fury. 
 
 A storm of pure burning rage.
 
-A consuming maelstrom of raw Zotha.
+A consuming maelstrom of Zotha.
 
 In the physical world, a roar from above split the air. 
 A machine voice booming with Epitomes of vengeance and hatred.
@@ -755,7 +777,7 @@ In agony, Kepra looked up.
 A vast shape soared above, made of dull metal and black-scaled flesh and burning Zotha. 
 The rotors in its great metal wings droned like hurricanes. 
 Mighty guns embedded in its body belched fire and lead upon the resphain. 
-A great crocodilian mouth roared dreadful spellwords in Mystic Talaac, and each bullet fired seems to hammer home as if carried on wings of righteous hate. 
+A great crocodilian mouth roared dreadful spellwords in Mystic Talaac, causing each bullet fired to hammer home as if carried on wings of righteous hate. 
 
 \emph{Iscrafel.} 
 
@@ -866,7 +888,7 @@ The weak evening light felt blinding.
 
 The first face he saw was the gentle Aeocryth. 
 
-``You live!'' says Aeocryth with a beaming smile. 
+``You live!'' said Aeocryth with a beaming smile. 
 
 Looming over them was a gigantic black-scaled and metallic form.
 
@@ -909,11 +931,11 @@ When he veered towards disgrace she led him to virtue.
 Salvation.
 
 %He would never forget that. 
-Under her watchful eye he felt safe from sin. Safe as an egg.
+Under her benevolent eye he felt safe from corruption, safe from sin. Safe as an egg.
 
 ``Did you heal me, holy one?''
 
-``No. Lord Iscrafel did.'' Aeocryth laughed softly. 
+``No. Lord Iscrafel did.'' She laughed softly. 
 ``For some reason this part never sticks to his reputation, but he is actually an excellent healer.''
 %Well, as long as it’s something that doesn’t require complicated medicine. Anything that can be healed with brute force.'' 
 
@@ -951,8 +973,8 @@ Iscrafel heard her and said nothing.
 The two were alone on the battlements; the soldiers and founts were resting or tending the wounded.
 Iscrafel was clad only in his lesser body now\dash{}half machine and hugely massive, but still suchian-sized, unlike his Draconian greater body. 
 
-``And I hate puppeteering people!'' she continued. 
-``I had to forcibly \emph{drag} three suchians between me and that resphan. Two of them got killed. I killed them. You only barely saved the third. And feeling each of them die was worse than if I had just taken the blow myself!''
+``And I hate puppeteering!'' she continued. 
+``I had to forcibly \emph{drag} three suchians between me and that resphan. Two of them got killed. I killed them. We only barely saved the third. And feeling each of them die was worse than if I had just taken the blow myself!''
 
 Iscrafel gazed out over the battlefield beyond the walls as he listened. 
 %His metal claws idly scraped on the walls.
@@ -1023,7 +1045,7 @@ Some notes about my home-made phonetics:
   \pitem{Jach-dun}{}{jaach-DOON}
   \pitem{Kelesh}{}{ke-LESH}
   \pitem{resphain}{}{RES-fain}
-  \pitem{resphan}{}{RES-fan}
+  \pitem{resphan}{}{RES-fän}
   \pitem{Quessanth}{}{KWES-saanth}
   \pitem{Rystessakhin}{}{ris-TES-ä-kheen}
   \pitem{Saphyr}{}{sä-FEER}
@@ -1032,7 +1054,7 @@ Some notes about my home-made phonetics:
   \pitem{Sipel}{}{si-PEL}
   \pitem{suchian}{}{SOO-kee-an}
   \pitem{Suthalba}{}{SOO-thäl-bä}
-  \pitem{Talaac}{[tæla:k]}{ta-LAAK}
+  \pitem{Talaac}{[tæla:k]}{tä-LAAK}
   \pitem{Tezoron}{}{TEZ-o-ron}
   \pitem{Zotha}{}{ZO-tha}
 \end{pronunciationenvironment}
